--- a/MoonlightGID/Views/Home/Index.cshtml
+++ b/MoonlightGID/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1>Welcome to</h1>
+    <img src="~/img/pgo.png" style="padding-left:5%;width:550px;height:250px;"/>
+    
 </div>
