--- a/MoonlightGID/Views/Home/Index.cshtml
+++ b/MoonlightGID/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model Customers
+
+@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -6,4 +8,25 @@
     <h1>Welcome to</h1>
     <img src="~/img/pgo.png" style="padding-left:5%;width:550px;height:250px;"/>
     
+</div>
+
+<div class="text-center">
+    <form method="post">
+        <div class="form-group">
+            <h2> Log In</h2>
+            <label asp-for="@Model.UserLogin" class="control-label"></label>
+            <input asp-for="@Model.UserLogin" class="form-control"/>
+            <span asp-validation-for="@Model.UserLogin" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="@Model.Password" class="control-label"></label>
+            <input type="password"asp-for="@Model.Password" class="form-control" />
+            <span asp-validation-for="@Model.Password" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <input type="submit" value="Log In" class="btn btn-primary" />
+            &nbsp;
+            <a href="Registration">Registration</a>
+        </div>
+    </form>
 </div>
