--- a/MoonlightGID/Views/Home/JobSearch.cshtml
+++ b/MoonlightGID/Views/Home/JobSearch.cshtml
@@ -4,7 +4,8 @@
     Layout = "_Layout";
 }
 
-<h1>Search</h1>
+<h1>Welcome @ViewBag.customer</h1>
+<h2>Search</h2>
 <div class="text-center">
     <input asp-for="@Model.JobType" class="form-control" />
     &nbsp;
