--- a/MoonlightGID/Views/Home/JobSearch.cshtml
+++ b/MoonlightGID/Views/Home/JobSearch.cshtml
@@ -9,7 +9,7 @@
 <div class="text-center">
     <input asp-for="@Model.JobType" class="form-control" />
     &nbsp;
-    <input type="submit" value="Log In" class="btn btn-primary" />
+    <input type="submit" value="Search" class="btn btn-primary" />
 </div>
 
 
