--- a/MoonlightGID/Views/Home/JobSearch.cshtml
+++ b/MoonlightGID/Views/Home/JobSearch.cshtml
@@ -7,9 +7,11 @@
 <h1>Welcome @ViewBag.customer</h1>
 <h2>Search</h2>
 <div class="text-center">
-    <input asp-for="@Model.JobType" class="form-control" />
-    &nbsp;
-    <input type="submit" value="Search" class="btn btn-primary" />
+    <form asp-action="SearchResults">
+        <input type="text" class="form-control" />
+        &nbsp;
+        <input type="submit" value="Search" class="btn btn-primary" />
+    </form>
 </div>
 
 
