--- a/MoonlightGID/Views/Home/SearchResults.cshtml
+++ b/MoonlightGID/Views/Home/SearchResults.cshtml
@@ -44,11 +44,11 @@
                             @Model.Jobs[i].Price
                         </td>
                         <td>
-                            if(@Model.Reviews!=null){
+                            @if(@Model.Reviews!=null){
                             @Model.GetRating(Model.Reviews, Model.Jobs[i].JobId)
                             }
                             else{
-                            Not Rated
+                            <p>Not Rated</p>
                             }
                         </td>
                         <td><input type="button" value="See More" class="btn btn-primary"/></td>
