--- a/MoonlightGID/Views/Home/SearchResults.cshtml
+++ b/MoonlightGID/Views/Home/SearchResults.cshtml
@@ -2,6 +2,7 @@
 
 @if (Model != null)
 {
+    <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="JobSearch">Search</a>
     <table class="table">
         <thead>
             <tr>
