--- a/MoonlightGID/Views/Home/CompareJobDetails.cshtml
+++ b/MoonlightGID/Views/Home/CompareJobDetails.cshtml
@@ -4,7 +4,7 @@
         <hr />
         <dl class="row">
             <dt class="col-sm-2">
-                Job Name
+                Job Name - @Model.Jobs[0].JobId
             </dt>
             <dd class="col-sm-10">
                 @Model.Jobs[0].JobName
@@ -50,8 +50,12 @@
             }
         </dl>
         <hr />
+        <form asp-action="Contact">
+            <input type="hidden" name="i" value="@Model.Jobs[0].JobId" />
+            <button  type="submit" class="btn btn-primary" value="@Model.Jobs[0].JobId">Contact @Model.Jobs[0].Company.CompanyName</button>
+        </form>&nbsp;
+        <form asp-action="SearchResults">
+            <input type="hidden" name="desc" value="@Model.Jobs[0].JobType" />
+            <button type="submit" class="btn btn-primary" value="@Model.Jobs[0].JobType"> Return to the List</button>
+        </form>
     </div>
-<div>
-    <a asp-action="Contact" asp-route-id="@Model.Jobs[0].CompanyId,@Model.Jobs[0].JobId">Contact @Model.Jobs[0].Company.CompanyName</a> |&nbsp;
-    <a asp-action="JobSearch" asp-route="@Model.Jobs[0].Description"> Return to List</a>
-</div>
